# MiseEnProd

./: .gitignore  Dockerfile  LICENSE  Notebook Main.ipynb  README.md  analyse.descriptive.ipynb  balancedmovies.csv  environment.yml  fetch_data.py  genderprediction.py  lieux-de-tournage-a-paris.csv  mlflow.db  model.py  moviedata.csv  pyproject.toml  randommovies.csv  requirements.txt  secrets.yaml  test.py  tests.ipynb  tmdb_extraction.py  tmdbdata.py  tmdbdata_branch_gilles.py  train.py  train2.py  usbestmovies.csv  view_data.ipynb
.github/workflows/: prod.yml  test.yaml
app/: api.py  api2.py  api_large.py  run.sh
deployment/: deployment.yaml  ingress.yaml  service.yaml
notebooks/: Notebook_Main.ipynb  model_pipelines.py  tests.ipynb  tmdbdata.py  train.py  view_data.ipynb
src/data/: download_from_s3.py  make_dataset.py
src/models/: config.py  model_pipelines.py  train.py
