[project]
name = "miseenprod"
version = "0.1.0"
description = "Prédiction de revenus de films à partir de données TMDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.135.3",
    "matplotlib==3.10.0",
    "mlflow==2.19.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "s3fs==2024.12.0",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "skops==0.12.0",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
